Kubernetes/new-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  namespace: student-app-namespace
  labels:
    app: mvc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvc-app
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mvc-app
    spec:
      containers:
        - name: mvc-app
          image: kikser19/kiii-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
  namespace: student-app-namespace
  labels:
    app: mvc-service
spec:
  type: ClusterIP
  selector:
    app: mvc-app
  ports:
    - protocol: TCP
      port: 84
      targetPort: 8001
