Kubernetes/new-database-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentappdb
  namespace: student-app-namespace
spec:
  type: ClusterIP
  selector:
    app: student-db
  ports:
  - protocol: TCP
    port: 84
    targetPort: 1433
    name: student-db
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  namespace: student-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-db
  serviceName: studentappdb
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  template:
    metadata:
      labels:
        app: student-db
    spec:
      containers:
        - name: web-db
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
              name: student-db
          volumeMounts:
            - name: db-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
