Kubernetes/new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvc-ingress
  namespace: student-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mvc-web.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mvc-service
                port:
                  number: 84
